@@ -1,3 +1,4 @@
+- Email: Fixed copying of multiple messages. Also set the "SEEN" flag on the copied messages
 - Files will be sorted by filesize correctly
 - Reminders can be removed from a task
 - Calendar: Fixed problem with strtotime and the YYYY.MM.DD date format in the recurrence pattern calculation
